[gd_scene load_steps=4 format=3 uid="uid://bhwtlcxkcnamg"]

[ext_resource type="Script" path="res://Scenes/Units/slow_area.gd" id="1_l3ftm"]
[ext_resource type="Texture2D" uid="uid://2qor4oid4mn7" path="res://Art/128x128_white_circle.png" id="2_6u141"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yp8is"]
radius = 256.0

[node name="SlowArea" type="Area2D"]
collision_layer = 0
collision_mask = 10
script = ExtResource("1_l3ftm")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0.498039, 0.482353, 0.419608, 0.729412)
texture = ExtResource("2_6u141")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_yp8is")

[node name="Timer" type="Timer" parent="."]
process_callback = 0
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
